fix nav background on mobile + bg color change

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,7 @@ body{
     margin: 0;
 
     font-family: "Jost", sans-serif;
-    background-color: #FAEDCD;
+    background-color: #fdf8ec;
     color: rgb(20, 20, 20);
 
     overflow: scroll;
